--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,14 +16,15 @@ dependencies:
   flutter:
     sdk: flutter
 
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
   carousel_pro: ^0.0.13
   cloud_firestore: ^0.8.2+3
-  google_maps_flutter: ^0.2.0+2
+  firebase_auth: ^0.6.6
+  google_maps_flutter: ^0.2.0
+  google_sign_in: ^4.0.1
 
 dev_dependencies:
+
   flutter_test:
     sdk: flutter
 
